manifests/demo-app-service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-preview
  labels:
    app: demo-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: demo-app
